--- a/教师端/css/tsakCenter.css
+++ b/教师端/css/tsakCenter.css
@@ -761,7 +761,7 @@ h3.question_tit.clear {
 	color:#222;
 	font-size: 1.4rem;
 }
-.question .question_tit span.grade input[type=text]{
+/*.question .question_tit span.grade input[type=text]{
 	display: inline-block;
 	width: 44px;
 	height: 24px;
@@ -773,7 +773,7 @@ h3.question_tit.clear {
 	color:#222;
 	font-size: 1.4rem;
 	outline: none;
-}
+}*/
 .question .question_tit span.grade em{
 	display: inline-block;
     font-style: normal;
@@ -1256,7 +1256,11 @@ h3.question_tit.clear {
 	line-height: 30px;
 	float: left;
 	margin: 0 14px;
-	min-width: 95px;
+	width: 94px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
 }
 #studentHtml{
 	max-height: 277px;
@@ -1683,7 +1687,7 @@ span.tit.font14 br:last-of-type {
 .fill_answer em.active{background: #5093e1; color: #fff;}
 
 .search_drop{display: inline-block; font-size: 1.4rem; position: relative;margin-top:2px;}
-.search_drop input{width: 110px; height: 22px; padding: 0 6px; border: 1px solid #50c14e; border-radius: 5px; color: #50c14e; cursor: pointer; outline: none; text-align: center; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;}
+.edit_question .question .question_tit .search_drop>input{width: 110px; height: 22px; padding: 0 6px; border: 1px solid #50c14e; border-radius: 5px; color: #50c14e; cursor: pointer; outline: none; text-align: center; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;}
 .search_drop ul{border: 1px solid #50c14e; border-radius: 3px; color: #50c14e; max-width: 120px; position: absolute; top: 23px; left: 1px; display: none; z-index: 10; max-height: 200px; overflow-y: auto;}
 .search_drop ul li{height: 22px; cursor: pointer; padding: 0 6px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; background: #fff;}
 .search_drop ul li:hover{background: #C5E1E4; color: #fff;}
